tests/sources/invalid/borrow/constructor_borrow_move_errors.fire
// Borrowed constructor argument move errors

import @firescript/std.io.println;

class Wrapper {
    text: string;

    fn Wrapper(&mut this, text: string) {
        this.text = text;
    }
}

fn badMoves(&s: string) -> void {
    a: Wrapper = Wrapper(s);      // Error: cannot move borrowed value into constructor param  //~ ERROR FS-SEM-0001 @26
    b: Wrapper = new Wrapper(s);  // Error: cannot move borrowed value into constructor param  //~ ERROR FS-SEM-0001 @30
    println(a.text);
    println(b.text);
}

src: string = "borrowed";
badMoves(src);
